# aria

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
aria/: cli.py  config.py  config.yaml  correlator.py  main.py  models.py
aria/agent/: loop.py  router.py  system_prompt.py  tools.py
aria/detectors/: prometheus.py
aria/memory/: family.py  matcher.py  store.py
aria/notifiers/: base.py  console.py  email.py  factory.py  slack.py
aria/tools/: base.py  docker_tool.py  kafka.py  postgres.py  prometheus.py
