[project]
name = "aria"
version = "0.1.0"
description = "Autonomous Resilience & Incident Agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "psycopg2-binary>=2.9",
    "confluent-kafka>=2.3",
    "docker>=7.0",
    "requests>=2.31",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.scripts]
aria = "aria.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
]
